# web_research_agent

./: .env.example  .gitignore  .replit  CLAUDE.md  DEBUG_GUIDE.md  LANGDOCK_SETUP_GUIDE.md  MANUAL_RESEARCH_GUIDE.md  MANUAL_RESEARCH_SUMMARY.md  PLAN_strategy_analytics.md  QUICKSTART_MANUAL_RESEARCH.md  QUICK_START.md  README.md  SETUP_GUIDE.md  briefing_Relevante_Nachrichten_der_letzten_24_Stunden_zu_Rüstungsbeschaffungen_für_die_deutsche_Bundeswehr_20250922_150609.md  briefing_artificial_intelligence_20250922_143653.md  briefing_artificial_intelligence_20250922_143838.md  briefing_artificial_intelligence_20250922_195323.md  briefing_artificial_intelligence_20250922_200606.md  briefing_artificial_intelligence_20250922_200951.md  briefing_artificial_intelligence_latest_developments_20250922_195519.md  debug_log_20250922_195323.json  debug_log_20250922_195519.json  debug_log_20250922_200606.json  debug_viewer.py  email-renderer.js  email_analysis.md  email_format_solution.md  email_format_test_example.md  email_reformatted_brief.md  example_task_operations.py  init_database.py  inspector.json  notepad.md  pyproject.toml  replit.md  roadmap.md  run_api.py  run_daily_briefing.py  test_api.py  test_email_templates.py  (+2 more)
.claude/: settings.local.json
api/: README.md  __init__.py  crud.py  database.py  email_templates.py  main.py  models.py  schemas.py  webhooks.py
config/: settings.yaml
core/: analytics.py  config.py  debug_log.py  enhanced_debug.py  graph.py  graph.py.backup  langfuse_tracing.py  llm_analyzer.py  scope.py  state.py  utils.py
docs/: API_CONFIGURATION.md  API_LOGGING_GUIDE.md  BUG_FIXES_PRE_DEPLOYMENT.md  ENVIRONMENT_SETUP_CHECKLIST.md  EXA_PARAMETERS.md  FIXES_APPLIED_SUMMARY.md  PRODUCTION_ISSUES_FIXED.md  QC_WORKFLOW_BUG_ANALYSIS.md  REPORT_LENGTH_FIXES.md  SONAR_PARAMETERS.md  TRACING_ARCHITECTURE_IMPROVEMENTS.md  WEBHOOK_SETUP_ISSUE.md  langdock_integration_code.md  replit_database_setup.md
langdock_actions/: 02_get_user_tasks.js  03_update_research_task.js  04_delete_research_task.js  07_webhook_receiver.js  README.md
renderers/: __init__.py
scripts/: migrate_main_strategies.py  test_daily_parallel_briefing.py
setup_assistant/: query_examples.md  system_limitations.md  system_prompt.md  (+1 more)
tools/: exa.py  (+7 more)
(+103 files in other folders)
